--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         <div class=content>
             <ul>
                 <li>
-                    <img src=img/2048.png alt=img>
+                    <img src=img/aaa.jpg alt=img>
                     <a href=project-2048.html>Build Your Own 2048!</a>
                     <p>I made my own version of 2048. How cool is that!?</p>
                 </li>
